objects/HealthCloudGA__Clinical_Assessment_Response__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__AbdominalPain__c</fullName>
        <label>Abdominal Pain</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CardiovascularDisease__c</fullName>
        <description>Cardiovascualr Disease</description>
        <label>Cardiovascular Disease</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Chills__c</fullName>
        <description>Chills</description>
        <label>Chills</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ChronicLiverDisease__c</fullName>
        <description>Chronic Liver Disease</description>
        <label>Chronic Liver Disease</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ChronicLungDisease__c</fullName>
        <description>Chronic Lung Disease (asthma/emphysema/COPD)</description>
        <label>Chronic Lung Disease</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ChronicRenalDisease__c</fullName>
        <label>Chronic Renal Disease</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Cough__c</fullName>
        <description>Cough (new onset or worsening of chronic cough)</description>
        <label>Cough</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CurrentSmoker__c</fullName>
        <description>Current Smoker</description>
        <label>Current Smoker</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DiabetesMellitus__c</fullName>
        <description>Diabetes Mellitus</description>
        <label>Diabetes Mellitus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Diarrhoea__c</fullName>
        <description>Diarrhea (&gt;= 3 loose/looser than normal stools/24 hr period)</description>
        <label>Diarrhea</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FeverOverThreshold__c</fullName>
        <description>Fever &gt; 100.4F (38C)</description>
        <label>Fever Over Threshold</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FormerSmoker__c</fullName>
        <description>Former smoker</description>
        <label>Former Smoker</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Headache__c</fullName>
        <label>Headache</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HighestRecordedTemperature__c</fullName>
        <description>Highest recorded temperature in Fahrenheit.</description>
        <label>Highest Recorded Temperature</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HospitalizationStatus__c</fullName>
        <description>Status showing whether the person was admitted to the hospital.</description>
        <label>Hospitalization Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admitted</fullName>
                </value>
                <value>
                    <fullName>Not_Admitted</fullName>
                    <label>Not Admitted</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Immunocompromised__c</fullName>
        <description>Immunocompromised Condition</description>
        <label>Immunocompromised</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MuscleAches__c</fullName>
        <description>Muscle Aches (myalgia)</description>
        <label>Muscle Aches</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NauseaOrVomiting__c</fullName>
        <description>Nausea or vomiting</description>
        <label>Nausea or Vomiting</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NeurologicalDisablityNotes__c</fullName>
        <description>In case of a Neurological disability, you can add additional notes for this</description>
        <label>Neurological Disability Notes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NeurologicalDisablity__c</fullName>
        <description>Neurologic/neurodevelopment/intellectual disability</description>
        <label>Neurological Disability</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Childcare workers</fullName>
                    <label>Childcare worker</label>
                </value>
                <value>
                    <fullName>Clinical laboratory technologists and technicians</fullName>
                    <label>Clinical laboratory technologist or technician</label>
                </value>
                <value>
                    <fullName>Combined food preparation and serving workers, including fast food</fullName>
                    <label>Combined food preparation or serving worker, including fast food</label>
                </value>
                <value>
                    <fullName>Dentists</fullName>
                    <label>Dentist</label>
                </value>
                <value>
                    <fullName>Emergency management directors</fullName>
                    <label>Emergency management director</label>
                </value>
                <value>
                    <fullName>Emergency medical technicians and paramedics</fullName>
                    <label>Emergency medical technician or paramedic</label>
                </value>
                <value>
                    <fullName>Health practitioner support technologists and technicians</fullName>
                    <label>Health practitioner support technologist or technician</label>
                </value>
                <value>
                    <fullName>Healthcare support workers, all other, including medical equipment preparers</fullName>
                    <label>Healthcare support worker(including medical equipment preparer)</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OnsetOfSymptoms__c</fullName>
        <description>Date when symptoms started.</description>
        <label>Onset of Symptoms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OtherChronicDiseasesNotes__c</fullName>
        <description>In case of a other chronic diseases, you can add additional notes for them</description>
        <label>Other Chronic Diseases Notes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OtherChronicDiseases__c</fullName>
        <description>Other chronic diseases</description>
        <label>Other Chronic Diseases</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OtherSymptoms__c</fullName>
        <description>Other Symptoms, please specify</description>
        <label>Other Symptoms</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ParentalConsent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether consent was provided to interview a minor child.</description>
        <label>Parental consent provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clinical Assessment Responses</relationshipLabel>
        <relationshipName>Clinical_Assessment_Responses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryCarePhysician__c</fullName>
        <description>Name of the person&apos;s primary care physician.</description>
        <label>Primary Care Physician</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ProviderFacilityName__c</fullName>
        <description>Name of the provider of healthcare services like hospital, clinic, or medical practitioner other than a primary care physician.</description>
        <label>Provider Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RunnyNose__c</fullName>
        <description>Runny Nose (rhinorrhea)</description>
        <label>Runny Nose</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ShortnessOfBreath__c</fullName>
        <description>Shortness of Breath (dyspnea)</description>
        <label>Shortness of Breath</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SoreThroat__c</fullName>
        <description>Sore Throat</description>
        <label>Sore Throat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubjectiveFever__c</fullName>
        <description>Subjective Fever (felt feverish)</description>
        <label>Subjective Fever</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TestingFacilityName__c</fullName>
        <description>Name of the facility where testing was done.</description>
        <label>Testing Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clinical Assessment Response</label>
    <nameField>
        <label>Clinical Assessment Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Assessment Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>